design) post size is fixed & add truncate

--- a/src/page/Home/style/scale.css
+++ b/src/page/Home/style/scale.css
@@ -1,3 +1,7 @@
 #main-first-page {
     height: 95vh;
 }
+
+.main-post {
+    width: 300px;
+}
